@@ -51,7 +51,7 @@ public class ConcurrentCommandStatusCounter {
     }
     
     public int get(int commandStatus) {
-        Integer key = new Integer(commandStatus);
+        Integer key = Integer.valueOf(commandStatus);
         AtomicInteger val = map.get(key);
         if (val == null) {
             return -1;
@@ -61,7 +61,7 @@ public class ConcurrentCommandStatusCounter {
     }
     
     public int incrementAndGet(int commandStatus) {
-        Integer key = new Integer(commandStatus);
+        Integer key = Integer.valueOf(commandStatus);
         AtomicInteger val = map.get(key);
         if (val == null) {
             val = new AtomicInteger(0);
